# mobitia_rust

./: Cargo.toml  FONTS_LICENSES.txt  analyze_webcam_properties.py  config.toml
assets/: osmo_capture.py
mobitia_doc/: book.toml
mobitia_doc/src/: 01_architecture.md  02_app.md  03_config.md  04_console.md  05_ui.md  10_cli.md  SUMMARY.md  asynchronous_subsystems.md  command_interface.md  core_concepts.md  development_debugging.md  experiments.md  introduction.md  trace_guide.md  user_interface.md
mobitia_doc/src/subsystems/: 06_motors.md  07_lidar.md  08_slam.md  09_de.md  11_navigation.md  12_elastic_band.md  13_recovery.md  14_persistence_grid.md
scripts/: align_trajectory_by_anchors.py  analyze_multi_run_degeneracy.py  analyze_results.py  compare_anchors.py  plot_degeneracy.py  plot_landscape.py  plot_paper_uncertainty.py  plot_valid_points.py  run_all_experiments.sh  run_anchor_aligned_analysis.sh  run_batch_degeneracy_mapping.sh
src/: app.rs  camera.rs  cli.rs  config.rs  experiment.rs  main.rs  osmo.rs  xppen.rs
src/app/: app_map_loading.rs
src/demo/: breathing_circle.rs  expanding_ripple.rs  mod.rs  rotating_scan.rs  table.rs
src/lidar/: comm.rs  config.rs  driver.rs  features.rs  mod.rs  protocol.rs
src/motors/: mod.rs
src/navigation/: de_tiny.rs  dwa.rs  elastic_band.rs  localization.rs  log_types.rs  mod.rs  persistence_grid.rs  pure_pursuit.rs  recovery.rs
src/osmo/: mod.rs  osmo_capture.py
src/slam/: differential_evolution.rs  mod.rs
src/ui/: camera_screen.rs  demo_screen.rs  get_path_suggestions.rs  lidar_analysis_screen.rs  lidar_screen.rs  map_screen.rs  mod.rs  nav_screen.rs  osmo_screen.rs  slam_screen.rs
src/xppen/: mod.rs
