[package]
name = "mobitia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
pretty_assertions = "1.4.1"
rand = "0.8"
regex = "0.1"
serialport = "4.3.0"
shlex = "1.3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
