[package]
name = "mobitia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
pretty_assertions = "1.4.1"
rand = "0.8"
regex = "0.1"
serialport = "4.3.0"
shlex = "1.3.0"
image = { version = "0.24", features = ["png"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[package.metadata.bundle]
name = "Mobitia" # アプリケーション名
identifier = "com.yourcompany.mobitia" # バンドル識別子 (ユニークなもの)
icon = ["icons/icon.icns"] # macOSアプリのアイコンファイル (後で作成)
resources = [] # アプリケーションに含めるリソースファイル (フォントなど)
category = "Utility" # macOSでのカテゴリ (Optional)
