[package]
name = "mobitia"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
eframe = { version = "0.24.1", features = ["persistence"] } # Added persistence feature
egui = "0.24.1"
egui_extras = { version = "0.24.1", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png"] }
libloading = "0.8.1"
nalgebra = "0.32.3"
rppal = { version = "0.17.1", optional = true } # Raspberry Pi GPIO support
serialport = "4.3.0"
shlex = "1.1.0"
web-time = "0.2.1"
dirs = "5.0.1"
chrono = "0.4.31" # For timestamps, etc.
serde = { version = "1.0", features = ["derive"] } # Added for serialization
toml = "0.8"
serde_yaml = "0.9" # Added for YAML serialization
regex = "1.10.2" # Added for regex matching
anyhow = "1.0" # Added
rand = "0.8" # Added
bresenham = "0.1.1"
lazy_static = "1.5.0"
nokhwa = { version = "0.10.10", features = ["input-avfoundation"] }
hidapi = "2.6.4"
serde_json = "1.0.148"
crc = "2.0.0" # CRC-16 (Modbus)を計算するために追加
modbus-rtu = "1.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
tracing-chrome = "0.7.2"
rayon = "1.11.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
pretty_assertions = "1.4.1"

[package.metadata.bundle]
name = "Mobitia" # アプリケーション名
identifier = "com.kazumichiinoue.mobitia" # バンドル識別子 (ユニークなもの)
icon = ["icons/icon.icns"] # macOSアプリのアイコンファイル (後で作成)
resources = ["assets/"] # アプリケーションに含めるリソースファイル (フォントなど)
category = "Utility" # macOSでのカテゴリ (Optional)
